# Rakuten_MLOps_Project

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  Makefile  README.md  architecture.md  data_tree.txt  docker-compose.yml  dvc.yaml  main.py  models.dvc  pyproject.toml  requirements.txt  results.dvc  setup.py
.dvc/: config
.github/workflows/: mlflow-ci.yml  python-app.yml
config/: params.yaml  paths.yaml
data/: .gitignore  preprocessed.dvc  raw.dvc  test_samples.dvc
data/processed/test_dataset/: dataset_info.json
data/test_samples/: full_test_5_samples.json  simple_test_5_samples.json  simple_test_5_samples_predictions.json
deployments/grafana/dashboards/: all_api.json  all_api_monitoring.json  nginx.json  single_api_monitoring.json
deployments/grafana/provisioning/datasources/: datasources.yaml
deployments/nginx/: .htpasswd  Dockerfile  admins.htpasswd  devs.htpasswd  nginx.conf  users.htpasswd
deployments/nginx/certs/: nginx.crt  nginx.key
deployments/prometheus/: prometheus.yaml
metrics/: .gitignore  metrics.json
models/: label_encoder.pkl  label_encoder.pkl.dvc  label_mappings.json  label_mappings.json.dvc  train_val_comparison.json
notebooks/: F1_class_metrics.py  bert_optim.ipynb  create_holdout_json.py
results/bert-rakuten-final/: classification_report_20260128_013209.json  evaluation_summary_20260123_165240.json  evaluation_summary_20260128_013209.json  predictions_20260123_165240.json  predictions_20260128_013209.json
scripts/: dvc_pull_if_needed.sh  generate_nginx_certs.sh  generate_nginx_htpasswd.sh  mlflow_evaluate_wrapper.py  mlflow_smoke.py  mlflow_smoke_rest.py  mlflow_smoke_rest.py.backup  mlflow_train_wrapper.py  register_best_model.py
src/api/: Dockerfile  api.py  requirements.txt
src/data/: Dockerfile  api.py  import_raw_data.py  pylock.toml  pyproject.toml  run_preprocess.py
src/data/core/: config.py
src/data/preprocessed/: images_test.csv  y_test.csv  y_train.csv
src/data/processed/test_dataset/: state.json
src/data/results/evaluation/: classification_report_20260108_124740.json  predictions_20260108_124740.json
src/data/services/data_import/: import_raw_data.py
src/data/services/preprocess/: text_cleaning.py  text_outliers.py  text_preparation_pipeline.py
src/evaluate_model/: Dockerfile  api.py  pylock.toml  pyproject.toml  run_evaluate.py
src/evaluate_model/services/: evaluate_text.py
src/features/: config.yaml  initialize_data.py  params.yaml  preprocessing_pipeline.py  text_outliers.py
src/models/: evaluate_text.py
src/predict/: .dockerignore  Dockerfile  api.py  predict_text.py  pylock.toml  pyproject.toml
src/predict/core/: config.py
src/predict/services/: predict_text.py  text_cleaning.py  text_outliers.py  text_preparation_predict.py
src/train_model/: .dockerignore  Dockerfile  api.py  pylock.toml  pyproject.toml  run_train.py  train_model_text.py
src/train_model/core/: config.py
src/train_model/services/: train_model_text.py
streamlit/: 1_Project_Overview.py
streamlit/pages/: 2_MLOps_Architecture.py  3_Data_Pipeline.py  4_MLOps_Setup.py  4_MLOps_Tools_Setup.py  5_Demo.py  5_Demo_Prediction.py  6_Conclusion_And_Outlook.py  6_Outlook.py  99_Demo_API.py
tests/: pyproject.toml
tests/integration/: test_data_quality.py  test_docker_services.py  test_dvc_pipeline.py  test_pipeline_e2e.py
tests/regression/: baselines_predict.json  capture_baselines_predict.py  test_predict.py
tests/test_api/: Dockerfile  test_api.py
tests/test_api_data/: Dockerfile  pylock.toml  pyproject.toml  test_api_data.py
tests/test_api_evaluate/: Dockerfile  pyproject.toml  test_api_evaluate.py
tests/test_api_predict/: .dockerignore  Dockerfile  conftest.py  pylock.toml  pyproject.toml  test_api_predict.py
tests/test_api_train/: Dockerfile  pyproject.toml  test_api_train.py
tests/test_nginx/: Dockerfile  pylock.toml  pyproject.toml  test_nginx.py
