[project]
name = "evaluate_model"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.57.3",
    "torch>=2.9.1",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.0",
    "pyarrow>=17.0.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
]

[dependency-groups]
api = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.40.0",
]

[tool.uv]
default-groups = ["api"]
