[project]
name = "predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "torch>=2.9.1",
    "scikit-learn>=1.3.0",
    "transformers>=4.57.3",
    "tqdm>=4.66.0",
]

[dependency-groups]
api = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.40.0",
]

[tool.uv]
default-groups = ["api"]


