[project]
name = "predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "torch>=2.9.1",
    "scikit-learn>=1.3.0",
    "transformers>=4.57.3",
    "tqdm>=4.66.0",
    "nltk==3.8.1",
    "spacy>=3.8.9",
    "spacy-langdetect>=0.1.2",
    "ftfy>=6.3.1",
    "bs4==0.0.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

[dependency-groups]
api = [
    "fastapi>=0.128.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.40.0",
]

[tool.uv]
default-groups = ["api"]

